<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>as2_3d_navigation_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="p.ochoaizaguirre@alumnos.upm.es">pabloochoa</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>as2_3d_map_interface</depend>
  <depend>as2_3d_map_server_plugin</depend>
  <depend>eigen</depend>
  <depend>octomap</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
