<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>as2_3d_path_planner_plugin</name>
  <version>0.1.0</version>
  <description>3D path planner plugin for Aerostack2 PathPlannerBehavior. Implements JPS3D global planning, EGO-Planner local replanning and Minimum-Snap trajectory generation via as2_3d_map_interface.</description>
  <maintainer email="p.ochoaizaguirre@alumnos.upm.es">Pablo Ochoa Izaguirre</maintainer>
  <license>BSD-3-Clause</license>

  <author email="p.ochoaizaguirre@alumnos.upm.es">Pablo Ochoa Izaguirre</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>as2_core</depend>
  <depend>as2_msgs</depend>
  <depend>as2_behavior</depend>
  <depend>as2_behaviors_path_planning</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>as2_3d_map_interface</depend>
  <depend>octomap_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
